feature: BC-3493